2009-11-16  Kevin Ryde  <user42@zip.com.au>

	* textmodes/flyspell.el (sgml-mode-flyspell-verify): Use
	`sgml-lexical-context' instead of own parse for tag.  (Further to
	Bug#4511).

2009-11-16  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el	(vc-log-show-limit): Default to 2000.
	(vc-print-log-internal): Insert buttons to request more entries
	when limiting the output.

	* vc-sccs.el (vc-sccs-print-log):
	* vc-rcs.el (vc-rcs-print-log):
	* vc-cvs.el (vc-cvs-print-log):
	* vc-git.el (vc-git-print-log): Return 'limit-unsupported when
	LIMIT is non-nil.

2009-11-16  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-gvfs.el (tramp-gvfs-dbus-event-error): Raise only an
	error when `tramp-gvfs-dbus-event-vector' is set.
	(tramp-gvfs-maybe-open-connection): Loop over `read-event'.

2009-11-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-rcs.el (vc-rcs-consult-headers): Add missing save-excursion.

2009-11-16  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-unregister-service): New defun.
	(dbus-register-property): Register the handlers of
	"org.freedesktop.DBus.Properties" for SERVICE.
	(dbus-property-handler): Fix docstring.

2009-11-16  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* emacs-lisp/bytecomp.el (byte-compile-output-file-form):
	Quote doc string reference in defvaralias as it is not in special form.
	(byte-compile-output-docform): Doc fix.

2009-11-16  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc.el (math-2-word-size, math-half-2-word-size)
	(calc-complement-signed-mode): New variables.
	(calc-set-mode-line): Add indicator for twos-complements.
	(math-format-number): Format twos-complement notation.

	* calc/calc-bin.el (calc-word-size): Reset the variables
	`math-2-word-size' and `math-half-2-word-size'.
	(math-format-complement-signed, math-symclip, calcFunc-symclip)
	(calc-symclip): New functions.

	* calc/calc-aent.el (math-read-token): Read complement signed numbers.
